--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Madhura Kulkarni
-  image             : https://github.com/kmadhura08/kmadhura08.github.io/blob/main/assets/pngs/profile.png
+  image             : https://dogtime.com/assets/uploads/gallery/pembroke-welsh-corgi-dog-breed-pictures/prance-8.jpg
 #  behance           : your_username
 # dribbble          : your_username
   email             : msk10@illinois.edu
